Add nav section to link to other pages

--- a/nodejs-server/views/index.html
+++ b/nodejs-server/views/index.html
@@ -14,5 +14,9 @@
         non-blocking I/O operations, which can greatly enhance the performance 
         of your applications.
     </p>
+    <nav>
+        <a href="/">Homepage</a>
+        <a href="/about">About page</a>
+    </nav>
 </body>
 </html>
