--- a/nodejs-server/views/about.html
+++ b/nodejs-server/views/about.html
@@ -7,5 +7,9 @@
 <body>
     <h1>About</h1>
     <h2>This is the Node.js about page</h2>
+    <nav>
+        <a href="/">Homepage</a>
+        <a href="/about">About page</a>
+    </nav>
 </body>
 </html>
